# OSPF

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: architecture.md  configuration.md  operations.md  segment-routing.md
etc/: ospfd.service  ospfd.yaml
src/ospfd/: __init__.py  __main__.py  config.py  const.py  daemon.py
src/ospfd/io/: netlink.py  raw_socket.py
src/ospfd/lsdb/: aging.py  database.py  flooding.py  origination.py
src/ospfd/packet/: auth.py  checksum.py  dd.py  header.py  hello.py  lsa.py  lsack.py  lsr.py  lsu.py
src/ospfd/protocol/: area.py  dr_election.py  instance.py  interface.py  neighbor.py
src/ospfd/spf/: dijkstra.py  external.py  inter_area.py  intra_area.py  routing_table.py
src/ospfd/sr/: database.py  lsa.py  origination.py  spf.py  tlv.py
src/ospfd/util/: identifier.py  ip.py  logging.py  timer.py
tests/: conftest.py
tests/unit/: test_checksum.py  test_config.py  test_dijkstra.py  test_dr_election.py  test_interface_fsm.py  test_lsdb.py  test_neighbor_fsm.py  test_packets.py  test_routing_table.py  test_sr.py
